Day 2: Training Net on CIFAR using Poutyne
Reference: https://medium.com/pytorch/poutyne-a-simplified-framework-for-deep-learning-in-pytorch-74b1fc1d5a8b

--- a/CIFAR using Poutyne.ipynb
+++ b/CIFAR using Poutyne.ipynb
@@ -430,8 +430,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "References: \n",
+    "- [Poutyne: A Simplified Framework for Deep Learning in PyTorch](https://medium.com/pytorch/poutyne-a-simplified-framework-for-deep-learning-in-pytorch-74b1fc1d5a8b)\n",
+    "- [Poutyne Documentation](https://poutyne.org/)\n",
+    "\n",
     "Extra code that's removed from this notebook while refactoring: [link](https://gist.github.com/rpalsaxena/a573a44d07d0aded8412c6f143bad563)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
