Update: Corrected the file path issue while downloading file

--- a/download_future_contracts.ipynb
+++ b/download_future_contracts.ipynb
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_name = 'I://Finance//Nifty_Fut_contract/NIFTY/'\n",
+    "dir_name = './NIFTY/'\n",
     "#os.chdir(dir_name) # change directory from working dir to dir with files\n",
     "\n",
     "for path, dir_list, file_list in os.walk(dir_name):\n",
